deploy/kubernetes/mqtt-adapter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-adapter
  namespace: oktopus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt-adapter
  template:
    metadata:
      labels:
        app: mqtt-adapter
    spec:
      containers:
        - name: mqtt-adapter
          image: oktopusp/mqtt-adapter:latest
          resources:
            requests:
              memory: 64Mi
              cpu: 0.1
            limits:
              memory: 128Mi
              cpu: 0.2
          imagePullPolicy: IfNotPresent
