deploy/kubernetes/ws-adapter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-adapter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-adapter
  template:
    metadata:
      labels:
        app: ws-adapter
    spec:
      containers:
        - name: ws-adapter
          image: oktopusp/ws-adapter:latest
          resources:
            #requests:
            #  memory: 64Mi
            #  cpu: 0.1
            #limits:
            # memory: 256Mi
            # cpu: 0.2
          imagePullPolicy: IfNotPresent
