deploy/kubernetes/acs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: acs
    spec:
      containers:
        - name: acs
          image: oktopusp/acs:latest
          resources:
            # requests:
            #   memory: 64Mi
            #   cpu: 0.5
            # limits:
            #   memory: 256Mi
            #   cpu: 1
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: acs-svc
spec:
  selector:
    app: acs
  ports:
    - protocol: TCP
      port: 9292
      targetPort: 9292
  type: ClusterIP
