deploy/kubernetes/controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: controller
    spec:
      containers:
        - name: controller
          image: oktopusp/controller:latest
          resources:
            # requests:
            #   memory: 64Mi
            #   cpu: 0.5
            # limits:
            #   memory: 256Mi
            #   cpu: 1
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: controller-svc
spec:
  selector:
    app: controller
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
