deploy/kubernetes/mitmproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mitmproxy-acs
  namespace: oktopus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mitmproxy-acs
  template:
    metadata:
      labels:
        app: mitmproxy-acs
    spec:
      containers:
      - name: mitmproxy
        image: mitmproxy/mitmproxy:latest
        args:
          - mitmdump
          - --mode
          - reverse:http://acs-svc.oktopus.svc.cluster.local:9292
          - --listen-port
          - "8080"
          - -s
          - /scripts/inject_cookie.py
        volumeMounts:
          - name: script-volume
            mountPath: /scripts
        ports:
        - containerPort: 8080
      volumes:
      - name: script-volume
        configMap:
          name: mitmproxy-script
---
apiVersion: v1
kind: Service
metadata:
  name: mitmproxy-acs
  namespace: oktopus
spec:
  selector:
    app: mitmproxy-acs
  ports:
  - name: http
    port: 9292
    targetPort: 8080
