deploy/kubernetes/mqtt.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt-svc
  namespace: oktopus
spec:
  selector:
    app: mqtt
  ports:
    - protocol: TCP
      port: 1883
      targetPort: 1883
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt
  namespace: oktopus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt
  template:
    metadata:
      labels:
        app: mqtt
    spec:
      containers:
        - name: mqtt
          image: oktopusp/mqtt:latest
          ports:
            - containerPort: 1883
          resources:
            requests:
              memory: 64Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 200m
          imagePullPolicy: IfNotPresent
