deploy/kubernetes/socketio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socketio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socketio
  template:
    metadata:
      labels:
        app: socketio
    spec:
      containers:
        - name: socketio
          image: oktopusp/socketio:latest
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: socketio-svc
spec:
  selector:
    app: socketio
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
