deploy/kubernetes/ingress-acs.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: acs-ingress
  namespace: oktopus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`acsoktopus.kube.cablevision-labs.com.ar`)
      kind: Rule
      services:
        - name: acs-svc
          port: 9292

  tls:
    secretName: acsktopus-cert-letsencrypt-prod
