deploy/kubernetes/ingress-web.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-ingress
  namespace: oktopus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`oktopus.kube.cablevision-labs.com.ar`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: frontend-svc
          port: 3000

    - match: Host(`oktopus.kube.cablevision-labs.com.ar`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: controller-svc
          port: 8000

    - match: Host(`oktopus.kube.cablevision-labs.com.ar`) && PathPrefix(`/socket.io`)
      kind: Rule
      services:
        - name: socketio-svc
          port: 5000
  tls:
    secretName: oktopus-cert-letsencrypt-prod
